--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "vv-template-nodebackend": "^0.0.14"
     },
     "dependencies": {
+        "deep-rename-keys": "^0.2.1",
+        "fast-xml-parser": "^4.2.5",
         "fs-extra": "^11.1.1",
         "mssqldriver": "^1.0.1",
         "vv-common": "^0.1.2",
@@ -41,7 +43,6 @@
         "vv-logger": "^0.1.0",
         "vv-metronom": "^0.1.1",
         "wildcard": "^2.0.1",
-        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz",
-        "xml-js": "^1.6.11"
+        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
     }
 }
