--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mssqlapifile-app",
-    "version": "0.0.1",
+    "version": "1.0.1",
     "description": "Files loader to Microsoft SQL Server",
     "main": "dist/src/index.js",
     "bin": "dist/src/index.js",
@@ -14,6 +14,7 @@
     "pkg": {
         "scripts": "dist/src/*.js",
         "assets": [
+            "dist/src/**/*.js",
             "dist/src/package.json",
             "node_modules/vv-logger/dist/src/*.js",
             "node_modules/vv-logger/dist/src/**/.js",
@@ -45,7 +46,7 @@
         "npm-check-updates": "16.10.15",
         "pkg": "^5.8.1",
         "prettier": "3.0.0",
-        "resedit": "^2.0.0",
+        "resedit": "^1.5.0",
         "ts-node": "10.9.1",
         "typescript": "5.1.6",
         "vv-template-nodebackend": "^0.0.14"
